--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
-    - assets/background.png
+    - assets/create_account_page_background.png
+    - assets/login_page_background.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
