--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,9 @@ flutter:
     - assets/logo.png
     - assets/create_account_page_background.png
     - assets/login_page_background.png
+    - assets/welcome_cards_background.png
+    - lib/features/auth/welcome_cards/images/hello_card_image.png
+    - lib/features/auth/welcome_cards/images/ready_card_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
