--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   carousel_slider: ^5.1.1
+  flutter_secure_storage: ^9.2.4
+  go_router: ^17.0.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
@@ -61,12 +64,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/create_account_page_background.png
-    - assets/login_page_background.png
-    - assets/welcome_cards_background.png
-    - lib/features/auth/welcome_cards/images/hello_card_image.png
-    - lib/features/auth/welcome_cards/images/ready_card_image.png
+    - assets/
+    - assets/icons/
+    - lib/features/auth/welcome_cards/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -80,9 +80,8 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  # - family: HermesIcons
+  #    fonts:
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
